src/test/ui/feature-gates/feature-gate-native_link_modifiers_as_needed.stderr
error[E0658]: `#[link(modifiers="as-needed")]` is unstable
  --> $DIR/feature-gate-native_link_modifiers_as_needed.rs:4:34
   |
LL | #[link(name = "foo", modifiers = "+as-needed")]
   |                                  ^^^^^^^^^^^^
   |
   = note: see issue #81490 <https://github.com/rust-lang/rust/issues/81490> for more information
   = help: add `#![feature(native_link_modifiers_as_needed)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
